ingress/nodeapp-virtual-v2-release.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp
spec:
  hosts:
  - nodeapp
  http:
  - route:
      - destination:
          host: nodeapp
          subset: v2
    corsPolicy:
      allowOrigins:
        - exact: http://ardih.id
      allowMethods:
        - GET
      allowHeaders:
        - "*"
      exposeHeaders:
        - "*"
      maxAge: 24h
      allowCredentials: false
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodeapp
spec:
  host: nodeapp
  subsets:
    - name: v2
      labels:
        version: v2
---
