ingress/nodeapp-virtual-v3-release.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp
spec:
  hosts:
  - nodeapp
  http:
  - route:
    - destination:
        host: nodeapp
        subset: v3
---
