ingress/nodeapp-virtual-v3-stage.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp
spec:
  hosts:
  - nodeapp
  http:
  - route:
    - destination:
        host: nodeapp
        subset: v1
      weight: 70
    - destination:
        host: nodeapp
        subset: v2
      weight: 20
    - destination:
        host: nodeapp
        subset: v3
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodeapp
spec:
  host: nodeapp
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
