ingress/nodeapp-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeapp
spec:
  hosts:
  - nodeapp
  http:
  - route:
    - destination:
        host: nodeapp
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodeapp
spec:
  host: nodeapp
  subsets:
  - name: v1
    labels:
      version: v1
